[package]
name = "bevy_ticked"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/bevy_ticked_networking",
    "crates/bevy_ticked_networking_ensemble",
    "crates/bevy_ticked_lockstep_networking",
]

[dependencies]
bevy = "0.18"
serde = { version = "1", features = ["derive"] }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[dev-dependencies]
avian3d = "0.6"

[[example]]
name = "bouncing_ball"
path = "examples/bouncing_ball.rs"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"
