[package]
name = "bevy_ticked_lockstep_networking"
version = "0.1.0"
edition = "2024"

[features]
default = ["transport-webrtc"]
transport-webrtc = ["bevy_ensemble_webrtc"]
transport-steam = ["bevy_ensemble_steam"]

[dependencies]
bevy = "0.19"
bevy_ticked = { path = "../.." }
bevy_ensemble = { path = "../../../bevy_ensemble" }
bevy_ensemble_webrtc = { path = "../../../bevy_ensemble/crates/bevy_ensemble_webrtc", optional = true }
bevy_ensemble_steam = { path = "../../../bevy_ensemble/crates/bevy_ensemble_steam", optional = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
avian2d = { version = "0.7", features = ["serialize"] }

[[example]]
name = "block_placer"
path = "examples/block_placer.rs"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
