[package]
name = "bevy_ticked_networking_ensemble"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
bevy_ticked = { path = "../.." }
bevy_ticked_networking = { path = "../bevy_ticked_networking" }
bevy_ensemble = { path = "../../../bevy_ensemble" }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
avian2d = { version = "0.6", features = ["serialize"] }
bevy_ensemble_webrtc = { path = "../../../bevy_ensemble/crates/bevy_ensemble_webrtc" }

[[example]]
name = "top_down_shooter"
path = "examples/top_down_shooter.rs"
